some small things.

--- a/dada/DADA/Template/templates/view_list_modalmenu_widget.tmpl
+++ b/dada/DADA/Template/templates/view_list_modalmenu_widget.tmpl
@@ -3,11 +3,11 @@
 <!-- tmpl_if expr="((add_email_count > 0) || (delete_email_count  > 0) || (black_list_add > 0) || (approved_count  > 0) || (denied_count  > 0) || (bounced_list_moved_to_list_count  > 0) || (bounced_list_removed_from_list > 0) )" --> 
 
 <br />
-<div class="psuedomodalbox" id="alertbox">
+<div class="clearskiesbox" id="alertbox">
 	
 	
 <!-- tmpl_if add_email_count -->	
-	<p class="alert">
+	<p>
 	<!-- tmpl_if email --> 
 		<!-- tmpl_var email --> has been
 	<!-- tmpl_else --> 
@@ -19,7 +19,7 @@
 
 
 <!-- tmpl_if skipped_email_count -->
-	<p class="alert">
+	<p>
 		<!-- tmpl_if email --> 
 			<!-- tmpl_var email --> 
 		<!-- tmpl_else --> 
@@ -30,20 +30,20 @@
 <!-- /tmpl_if -->
 
 <!-- tmpl_if delete_email_count -->
-	<p class="alert">
+	<p>
 		<!-- tmpl_if email --> 
 			<!-- tmpl_var email --> has been 
 		<!-- tmpl_else --> 
 			<!-- tmpl_var delete_email_count --> address(es) have been 
 		<!-- /tmpl_if --> 	
-			removed from your <!-- tmpl_var type_title -->.
+			removed from, <!-- tmpl_var type_title -->.
 	</p>
 <!-- /tmpl_if -->
 
 
 
 <!-- tmpl_if approved_count --> 
-	<p class="alert">
+	<p>
 		<!-- tmpl_if email --> 
 			<!-- tmpl_var email --> has been 
 		<!-- tmpl_else --> 
@@ -54,7 +54,7 @@
 <!-- /tmpl_if --> 
 
 <!-- tmpl_if denied_count --> 
-	<p class="alert">
+	<p>
 		<!-- tmpl_if email --> 
 			<!-- tmpl_var email --> has been 
 		<!-- tmpl_else --> 
@@ -65,7 +65,7 @@
 <!-- /tmpl_if -->
 
 <!-- tmpl_if bounced_list_moved_to_list_count --> 
-	<p class="alert">
+	<p>
 		<!-- tmpl_if email --> 
 			<!-- tmpl_var email --> has been 
 		<!-- tmpl_else --> 
@@ -76,7 +76,7 @@
 <!-- /tmpl_if -->
 
 <!-- tmpl_if bounced_list_removed_from_list --> 
-	<p class="alert">
+	<p>
 	
 	<!-- tmpl_if email --> 
 		<!-- tmpl_var email --> has been 
@@ -88,7 +88,7 @@
 <!-- /tmpl_if -->
 
 <!-- tmpl_if black_list_add --> 
-	<p class="alert">
+	<p>
 		<!-- tmpl_if email --> 
 			<!-- tmpl_var email --> has been 
 		<!-- tmpl_else --> 
