--- a/dada/DADA/Template/templates/error_already_sent_unsub_confirmation_screen.tmpl
+++ b/dada/DADA/Template/templates/error_already_sent_unsub_confirmation_screen.tmpl
@@ -1,9 +1,7 @@
 <!-- begin error_already_sent_unsub_confirmation_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="Problems with Confirmation Request" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
-
-<h1>Problems with Confirmation Request</h1> 
 
 <p>
  It seems that you were recently sent a confirmation to unsubscribe from: 
