--- a/dada/DADA/Template/templates/error_closed_list_screen.tmpl
+++ b/dada/DADA/Template/templates/error_closed_list_screen.tmpl
@@ -1,12 +1,7 @@
 <!-- begin error_closed_list_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="Unable to Subscribe" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
-
-
-<h1>
- Unable to Subscribe
-</h1> 
 
 <p>
  This list you are trying to subscribe to is closed. Only the list administrator can 
