--- a/dada/DADA/Template/templates/error_incorrect_login_url_screen.tmpl
+++ b/dada/DADA/Template/templates/error_incorrect_login_url_screen.tmpl
@@ -1,10 +1,7 @@
 <!-- begin error_incorrect_login_url_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="Problems Logging In" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
-
-
-<h1>Problems Logging In</h1> 
 
 <p>
  You've attempted to log in from a unauthorized form. Please use the 
