--- a/dada/DADA/Template/templates/error_invalid_pin_screen.tmpl
+++ b/dada/DADA/Template/templates/error_invalid_pin_screen.tmpl
@@ -1,12 +1,7 @@
 <!-- begin error_invalid_pin_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="Invalid Pin Number" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
-
-
-<h1>
- Invalid Pin Number
-</h1> 
 
 <p>
  The pin number you gave wasn't correct for your email address. 
