--- a/dada/DADA/Template/templates/error_list_already_exists_screen.tmpl
+++ b/dada/DADA/Template/templates/error_list_already_exists_screen.tmpl
@@ -1,12 +1,9 @@
 <!-- begin error_list_already_exists.tmpl --> 
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="Mailing List Already Exists" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 
 
-<h1>
- The List Name <!--- tmpl_var list_settings.list_name --><!-- I doubt that's gonna work --> Already Exists
-</h1> 
 
 <p>
  So as not to overwrite the list that's already set up, please pick a new name.
