--- a/dada/DADA/Template/templates/error_need_to_login_screen.tmpl
+++ b/dada/DADA/Template/templates/error_need_to_login_screen.tmpl
@@ -1,12 +1,7 @@
 <!-- begin error_need_to_login_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="Please Log In" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
-
-
-<h1>
- You Need to Log In
-</h1> 
 
 <p>
  I didn't catch the name of your list or its password.
