--- a/dada/DADA/Template/templates/error_no_admin_permissions_screen.tmpl
+++ b/dada/DADA/Template/templates/error_no_admin_permissions_screen.tmpl
@@ -1,10 +1,7 @@
 <!-- begin error_no_admin_permissions_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="Screen Disabled." -->
 
-<h1>
-	Screen Disabled.
-</h1>
 <p>
 	This screen has been disabled, when Signing in with the List Password.
 </p>
