--- a/dada/DADA/Template/templates/error_no_archive_entry_screen.tmpl
+++ b/dada/DADA/Template/templates/error_no_archive_entry_screen.tmpl
@@ -1,12 +1,7 @@
 <!-- begin error_no_archive_entry_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="Entry Not Available" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
-
-
-<h1>
- Entry Not Available
-</h1> 
 
 <p>
  The archived message you're trying to find isn't there. It may have been removed by the list owner.
