--- a/dada/DADA/Template/templates/error_no_display_attachments_screen.tmpl
+++ b/dada/DADA/Template/templates/error_no_display_attachments_screen.tmpl
@@ -1,12 +1,7 @@
 <!-- begin error_no_display_attachments_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="Sorry," -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
-
-
-<h1>
- Sorry,
-</h1> 
 
 <p>
  Attachments for messages of this list are not displayed.
