--- a/dada/DADA/Template/templates/error_no_list_password_screen.tmpl
+++ b/dada/DADA/Template/templates/error_no_list_password_screen.tmpl
@@ -1,12 +1,7 @@
 <!-- begin error_no_list_password_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="Problem Logging In" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
-
-
-<h1>
- Problem Logging In
-</h1>
 
 <p>
  Please refer to the error logs for more information.
