--- a/dada/DADA/Template/templates/error_not_on_sub_confirm_list_screen.tmpl
+++ b/dada/DADA/Template/templates/error_not_on_sub_confirm_list_screen.tmpl
@@ -1,12 +1,8 @@
 <!-- begin error_not_on_sub_confirm_list_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="Problems with Subscribing" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 
-
-<h1>
- Problems with Subscribing
-</h1> 
 <p>
  The subscription confirmation did not complete correctly. This may be because:
 </p>
