--- a/dada/DADA/Template/templates/error_not_on_unsub_confirm_list_screen.tmpl
+++ b/dada/DADA/Template/templates/error_not_on_unsub_confirm_list_screen.tmpl
@@ -1,19 +1,14 @@
 <!-- begin error_not_on_unsub_confirm_list_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="Problems with Unsubscribing!" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
-
-
-<h1>
- Problems with Unsubscribing!
-</h1> 
 
 <p>The unsubscription confirmation did not complete correctly.  This may be because:
 </p>
 
 <ul> 
  <li>
-	You've attempted to unsubscribe to a list (even when using a valid pin), without first asking for a confirmation.
+	You've attempted to unsubscribe to a Mailing List (even when using a valid pin), without first asking for a confirmation.
  </li>	
 </ul>
 
