--- a/dada/DADA/Template/templates/error_over_list_quota_screen.tmpl
+++ b/dada/DADA/Template/templates/error_over_list_quota_screen.tmpl
@@ -1,15 +1,10 @@
 <!-- begin error_over_list_quota_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="Unable to Create a New Mailing List" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 
-
-<h1>
- Unable to Create a New List
-</h1> 
-
 <p>
- The limit to the amount of lists that can be created has been reached.
+ The limit to the amount of Mailing Lists that can be created has been reached.
 </p>
 
 <!-- tmpl_include error_footer_widget.tmpl -->
