--- a/dada/DADA/Template/templates/error_over_subscription_quota_screen.tmpl
+++ b/dada/DADA/Template/templates/error_over_subscription_quota_screen.tmpl
@@ -1,14 +1,10 @@
 <!-- begin error_over_subscription_quota_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="Unable to Subscribe" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 
-
-<h1>
- Unable to Subscribe
-</h1> 
 <p>
- This list currently cannot have any more subscribers.
+ This Mailing List currently cannot have any more subscribers.
 </p>
 
 <!--- tmpl_var list_settings.list_name --><
