--- a/dada/DADA/Template/templates/error_subscribed_screen.tmpl
+++ b/dada/DADA/Template/templates/error_subscribed_screen.tmpl
@@ -1,12 +1,7 @@
 <!-- begin error_subscribed_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="You're Already Subscribed!" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
-
-
-<h1>
- You're already subscribed!
-</h1>
 
 <p>
  Your email address, 
