--- a/dada/DADA/Template/templates/list_options_screen.tmpl
+++ b/dada/DADA/Template/templates/list_options_screen.tmpl
@@ -105,7 +105,7 @@ People will still be able to subscribe/unsubscribe
 <li>
 	
      You will also have to manually enter this list's 
-     Short Name when logging onto the list control panel.
+     Short Name when logging into the list control panel.
     </li>
 </ul> 
 
