--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -3,20 +3,21 @@
 <!-- tmpl_set name="title" value="Install <!-- tmpl_var PROGRAM_NAME -->" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 
-<h1>Install <!-- tmpl_var PROGRAM_NAME --></h1> 
+<!-- <h1>Install <!-- tmpl_var PROGRAM_NAME --></h1>  -->
 	
 <!-- tmpl_if errors --> 
 	<h2>
 		Problems When Attempting to Install!
 	</h2>
-	<p class="error"> 
-	 Some problems were encountered, when attempting to install and configure <!-- tmpl_var PROGRAM_NAME -->. Details are marked below:
-	</p>  
+	<div class="badweatherbox"> 
+	 <p>
+		Some problems were encountered, when attempting to install and configure 
+		<!-- tmpl_var PROGRAM_NAME -->. Details are marked below:</p>
+	</div>  
 <!-- /tmpl_if --> 
 
 <!-- tmpl_if lists_available --> 
 
-	<br />
 	<div class="badweatherbox">
 
 	<h3>Warning!</h3> 
@@ -64,7 +65,6 @@
 
 <!-- tmpl_if error_cant_read_config_dot_pm --> 
 
-	<br />
 	<div class="badweatherbox">
 
 
@@ -78,7 +78,6 @@
 		file yourself. (We'll let you know where.)
 	</p>
 	</div> 
-	<br />
 
 <!-- /tmpl_if --> 
 <!-- tmpl_if error_cant_write_config_dot_pm --> 
@@ -96,7 +95,6 @@
 	file yourself. (We'll let you know, where.)
 </p>
 </div> 
-<br />
 <!-- /tmpl_if --> 
 
 <!-- tmpl_if comment --> 
@@ -132,19 +130,19 @@
 	<!-- tmpl_if error_create_dada_files_dir  --> 
 		<ul> 
 		<li>
-		<p class="error"> 
+		<div class="badweatherbox">
 		 Can not create, <em><!-- tmpl_var install_dada_files_dir_at -->/<strong><!-- tmpl_var Dada_Files_Dir_Name --></strong></em>
 		</p>
-		</li>
+		</div>
 		</ul>
 
 	<!-- /tmpl_if --> 
 	<!-- tmpl_if error_dada_files_dir_exists  --> 
 		<ul> 
 		<li>
-		<p class="error"> 
+			<div class="badweatherbox">
 			The directory, <em><!-- tmpl_var dada_files_loc -->/<strong><!-- tmpl_var Dada_Files_Dir_Name --></strong></em> already exists.
-		</p>
+		</div>
 
 		<!-- tmpl_if test_complete_dada_files_dir_structure_exists --> 
 				<br />
@@ -173,7 +171,6 @@
 					  
 				
 			</div> 
-			<br />
 			
 		<!-- /tmpl_if --> 
 		
@@ -231,13 +228,14 @@
 
 
 <!-- tmpl_if error_program_url_is_blank  --> 
+	<div class="badweatherbox">
+	
 	<ul>
 	<li>
-	<p class="error"> 
-	Your <!-- tmpl_var PROGRAM_NAME --> URL is blank.</em>
+		<p>	Your <!-- tmpl_var PROGRAM_NAME --> URL is blank.</em>
 	</p></li>
 	</ul> 
-	
+</div>
 <!-- /tmpl_if -->
 
 
@@ -267,21 +265,26 @@
 
 
 <!-- tmpl_if error_root_pass_is_blank  --> 
+	<div class="badweatherbox">
+	
 	<ul>
 	<li>
-	<p class="error"> 
+	<p> 
 	Your <!-- tmpl_var PROGRAM_NAME --> Root Password is Blank.</em>
 	</p></li></ul> 
-	
+</div>
+
 <!-- /tmpl_if -->
 <!-- tmpl_if error_pass_no_match  --> 
+	<div class="badweatherbox">
+	
 	<ul>
 	<li>
-	<p class="error"> 
+	<p> 
 	Your <!-- tmpl_var PROGRAM_NAME --> Root Passwords Do Not Match.</em>
 	</p></li>
 	</ul> 
-	
+</div>
 <!-- /tmpl_if -->
 
 <div id="root_pass_help" style="display:none"> 
@@ -306,13 +309,17 @@ access <em>any</em> mailing list.</p>
 <legend><!-- tmpl_var PROGRAM_NAME --> Backend [<a href="#" onclick="toggleDisplay('backend_help');return false;">?</a>]</legend> 
 
 <!-- tmpl_if error_sql_connection  --> 
+	<div class="badweatherbox">
+	
 	<ul>
 	<li>
-	<p class="error"> 
+	<p> 
 		Could not connect to your SQL Server
 	</p>
 	</li>
 	</ul> 
+	</div>
+	
 <!-- /tmpl_if -->
 
 
@@ -344,10 +351,14 @@ If using either the SQL backends, make sure to create a new database before conf
 <!-- tmpl_if can_use_DBI --> 
 <div id="sql_info" style="display:none;"> 
 <fieldset>
-	<legend>SQL Information</legend> <!-- tmpl_if error_sql_table_populated -->
+	<legend>SQL Information</legend> 
+	
+	<!-- tmpl_if error_sql_table_populated -->
+	<div class="badweatherbox">
+	
 	<ul>
 		<li>
-			<p class="error">
+			<p>
 				The SQL information below is correct, but there are tables in this database that correspond to the tables that <!-- tmpl_var PROGRAM_NAME --> requires.
 			</p>
 			<br />
@@ -365,7 +376,10 @@ If using either the SQL backends, make sure to create a new database before conf
 			<br />
 		
 		</li>
-	</ul><!-- /tmpl_if -->
+	</ul>
+</div>
+
+	<!-- /tmpl_if -->
 	<p>
 		<label style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block" for="sql_server">Server:</label> <input type="text" name="sql_server" id="sql_server" value="localhost" />
 	</p>
@@ -388,9 +402,10 @@ If using either the SQL backends, make sure to create a new database before conf
 
 
 <!-- tmpl_else --> 
-	<p class="error"> 
-		Your current server setup does not support the SQL backend. 
+	<div class="badweatherbox">
+	<p>Your current server setup does not support the SQL backend. 
 	</p>
+</div>
 	
 <!-- /tmpl_if --> 
 </fieldset> 
