--- a/dada/DADA/Template/templates/error_black_listed_screen.tmpl
+++ b/dada/DADA/Template/templates/error_black_listed_screen.tmpl
@@ -1,10 +1,7 @@
 <!-- begin error_black_listed_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="You Are Unable to Subscribe" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
-
-
-<h1>You Are Unable to Subscribe</h1> 
 
 <p>It seems that your email address, 
 
