--- a/dada/DADA/Template/templates/error_invalid_password_screen.tmpl
+++ b/dada/DADA/Template/templates/error_invalid_password_screen.tmpl
@@ -1,12 +1,7 @@
 <!-- begin error_invalid_password_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="Your Mailing List Login Was Not Valid" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
-
-
-	<h1>
-	 Your Mailing List Login Was Not Valid
-	</h1> 
 
 	<p>
 	The Mailing List Password you've entered to Log Into: 
