--- a/dada/DADA/Template/templates/error_invalid_root_password_screen.tmpl
+++ b/dada/DADA/Template/templates/error_invalid_root_password_screen.tmpl
@@ -1,10 +1,7 @@
 <!-- begin error_invalid_root_password_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="Your Root Password is Incorrect" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
-
-
-<h1>Your Root Password is Incorrect</h1> 
 
 <p>
 The root password you gave me didn't match up to the one one I have for 
