--- a/dada/DADA/Template/templates/error_invite_only_list_screen.tmpl
+++ b/dada/DADA/Template/templates/error_invite_only_list_screen.tmpl
@@ -1,15 +1,10 @@
 <!-- begin error_invite_only_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="This mailing list is invitation only" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 
-
-<h1>
- This mailing list is invitation only
-</h1> 
-
 <p>
-	This mailing list can only be subscribed to by invitation. 
+	This Mailing List can only be subscribed to by invitation. 
 </p>
 
 <!-- tmpl_include error_footer_widget.tmpl -->
