--- a/dada/DADA/Template/templates/error_no_list_screen.tmpl
+++ b/dada/DADA/Template/templates/error_no_list_screen.tmpl
@@ -1,12 +1,7 @@
 <!-- begin error_no_list_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="Couldn't Find Mailing List" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
-
-
-<h1>
- Couldn't Find List (<!-- tmpl_var list_settings.list -->)
-</h1> 
 
 <p>
  It's possible that it has been deleted or moved 
