--- a/dada/DADA/Template/templates/error_no_root_password_screen.tmpl
+++ b/dada/DADA/Template/templates/error_no_root_password_screen.tmpl
@@ -1,15 +1,13 @@
 <!-- begin error_no_root_password_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="No Root Password Set" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 
-
-<h1>No Root Password Set</h1> 
 
 <p>The <!-- tmpl_var PROGRAM_NAME --> Root Password has 
 	<strong>
 	 not
-	</strong> been set to a valid value. List creation is not 
+	</strong> been set to a valid value. Mailing List creation is not 
 allowed with the <!-- tmpl_var PROGRAM_NAME --> Root Password left blank.</p> 
 
 <!-- end error_no_root_password_screen.tmpl --> 
