--- a/dada/DADA/Template/templates/error_no_show_archives_screen.tmpl
+++ b/dada/DADA/Template/templates/error_no_show_archives_screen.tmpl
@@ -1,12 +1,7 @@
 <!-- tmpl_var error_no_show_archives_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="No Archived Messages" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
-
-
-<h1>
- No Archived Messages
-</h1> 
 
 <p>
  There are no messages archived for this list that are available to be viewed.
