--- a/dada/DADA/Template/templates/error_unsub_invalid_email_screen.tmpl
+++ b/dada/DADA/Template/templates/error_unsub_invalid_email_screen.tmpl
@@ -1,12 +1,7 @@
 <!-- begin error_unsub_invalid_email_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="title" value="Invalid Email Address" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
-
-
-<h1>
- Invalid Email Address
-</h1> 
 
 <p>
  The address you gave, 
