--- a/dada/DADA/Template/templates/profile_update_email_auth_send.tmpl
+++ b/dada/DADA/Template/templates/profile_update_email_auth_send.tmpl
@@ -1,10 +1,6 @@
 <!-- begin profile_update_email_auth_send.tmpl --> 
 
-<!-- tmpl_set name="title" value="Authorization Email Sent" -->
-
-<h1>
-	Profile Email Update Confirmation Sent!
-</h1>
+<!-- tmpl_set name="title" value="Profile Email Update Confirmation Sent!" -->
 
 <p>An email message has been sent to your <em>updated</em> email address, </p> 
 
