Fixing a bunch of failing tests.

--- a/dada/DADA/Template/templates/add_email_screen.tmpl
+++ b/dada/DADA/Template/templates/add_email_screen.tmpl
@@ -309,7 +309,7 @@ Membership (<!-- tmpl_var type_title -->)
  </legend>
  
  
-    These addresses are not included on your 
+    <p>These addresses are not included on your 
 		  <strong>
 		   white list.
 		  </strong>
