--- a/dada/DADA/Template/templates/list_template.tmpl
+++ b/dada/DADA/Template/templates/list_template.tmpl
@@ -21,14 +21,11 @@
   <div id="PageWrapper">
  	<div id="Header">
 		<a href="<!-- tmpl_var PROGRAM_URL -->">
-			<img src="<!-- tmpl_var S_PROGRAM_URL -->/img/dada_mail_logo_sm.png/" />
+			<img src="<!-- tmpl_var S_PROGRAM_URL -->/img/dada_mail_logo_sm.png/" title="<!-- tmpl_var PROGRAM_NAME -->" alt="<!-- tmpl_var PROGRAM_NAME -->" />
 	    </a>
 			<!-- tmpl_if show_profile_widget --> 
 				<!-- tmpl_var profile_widget --> 
 			<!-- /tmpl_if --> 
-
-			
-	    </span>
 	    <div class="floatclear"></div>
 	  </div><!-- ends id="Header" -->
 	
