--- a/dada/DADA/Template/templates/profile_fields.tmpl
+++ b/dada/DADA/Template/templates/profile_fields.tmpl
@@ -49,9 +49,11 @@
 
 <!-- tmpl_if can_have_subscriber_fields --> 
     
-	<p class="alert">
+	<div class="clearskiesbox">
+	<p>
 	 Subscriber Profile Fields are global and changing them will affect all Mailing Lists. You may only change the Subscriber Profile Fields if you are logged in to an existing list using the <!-- tmpl_var PROGRAM_NAME --> Root Password.
 	</p>
+	</div>
     
     
     <!-- tmpl_if field_errors --> 
