--- a/dada/DADA/Template/templates/subscription_options_screen.tmpl
+++ b/dada/DADA/Template/templates/subscription_options_screen.tmpl
@@ -15,9 +15,12 @@
 
 <!-- tmpl_if SUBSCRIPTION_QUOTA --> 
 
-    <p class="alert">
-     Currently, there is a global limit of, <!-- tmpl_var SUBSCRIPTION_QUOTA --> subscribers per Mailing List.
-    </p>
+	<div class="clearskiesbox">
+    	<p>
+     	Currently, there is a Global limit of <!-- tmpl_var SUBSCRIPTION_QUOTA --> subscribers per Mailing List.
+    	</p>
+	</div>
+
 <!-- tmpl_else --> 
 
     <p class="positive"> 
