--- a/dada/DADA/Template/templates/membership.tmpl
+++ b/dada/DADA/Template/templates/membership.tmpl
@@ -1,5 +1,37 @@
 <!-- begin membership.tmpl -->
 
+
+<script type="text/javascript">
+//<![CDATA[
+
+	
+	
+Event.observe(window, 'load', function() {
+	mailing_list_history();	
+});
+
+function mailing_list_history(){ 
+	new Ajax.Updater(
+		'mailing_list_history', '<!-- tmpl_var S_PROGRAM_URL -->', 
+		{ 
+		    method: 'post', 
+			parameters: {
+				f:       'mailing_list_history',
+				email:   '<!-- tmpl_var email -->',
+			},
+		onCreate: 	 function() {
+			$('mailing_list_history_loading').update('<p class="alert">Loading...</p>');
+		},
+		onComplete: 	 function() {
+			$('mailing_list_history_loading').update('<p class="alert">&nbsp;</p>');
+			Effect.BlindDown('mailing_list_history');
+		}	
+		});
+}
+
+</script> 
+
+
 <!-- tmpl_set name="title" value="Membership" -->
 
 <div id="screentitle"> 
@@ -107,68 +139,73 @@
 
 <h1>Mailing List History</h1> 
 
-<!-- tmpl_include filtered_list_activity_widget.tmpl -->
-
-<fieldset> 
-<legend>Profile Fields</legend>
+<div id="mailing_list_history_loading"></div>
+<div id="mailing_list_history" style="display:none;"></div>
 
 
-<!-- tmpl_unless root_login --> 
-	<p class="error">
-		You must be logged in with the <!-- tmpl_var PROGRAM_NAME --> Root Password to be able to edit a Subscriber's Profile Fields. 
-	</p>
-<!-- /tmpl_unless -->
+<!-- tmpl_if fields --> 
 
-<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
-
-<!-- tmpl_if root_login --> 
-	 <input type="hidden" name="email"   value="<!-- tmpl_var email escape="HTML" -->" />
-	 <input type="hidden" name="f"       value="membership" />
-	 <input type="hidden" name="process" value="1" />
-	 <input type="hidden" name="type"    value="<!-- tmpl_var type -->" />
-<!-- /tmpl_if --> 
-
-<!-- tmpl_unless root_login --> 
-
-	<!-- tmpl_loop fields --> 
-	    <p>
-	     <label for="<!-- tmpl_var name escape=HTML -->" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
-	      <!-- tmpl_var label escape=HTML --> (<!-- tmpl_var name escape=HTML -->): 
-	     </label>
-	    <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="<!-- tmpl_var name escape=HTML -->" value="<!-- tmpl_var value escape=HTML -->" disabled="disabled" />
-	    </p>
-	<!--/tmpl_loop--> 
-
-<!-- tmpl_else --> 
-
-	<p class="alert">
-		Subscriber Profile Fields information will be changed for all Mailing Lists.
-	</p>
-	<!-- tmpl_loop fields --> 
-	    <p>
-	     <label for="<!-- tmpl_var name escape=HTML -->" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
-	      <!-- tmpl_var label escape=HTML --> (<!-- tmpl_var name escape=HTML -->): 
-	     </label>
-	    <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="<!-- tmpl_var name escape=HTML -->" value="<!-- tmpl_var value escape=HTML -->" />
-	    </p>
-	<!--/tmpl_loop-->
-
-<!-- /tmpl_unless --> 
-
-<!-- tmpl_if root_login --> 
-	 <div class="buttonfloat">
-	  <input type="submit" value="Edit Information" class="cautionary" />
-	 </div>
-<!-- /tmpl_if --> 
-
-	</form>
-
-<div class="floatclear"></div>
+	<fieldset> 
+	<legend>Profile Fields</legend>
 
 
+	<!-- tmpl_unless root_login --> 
+		<p class="error">
+			You must be logged in with the <!-- tmpl_var PROGRAM_NAME --> Root Password to be able to edit a Subscriber's Profile Fields. 
+		</p>
+	<!-- /tmpl_unless -->
 
-</fieldset>
+	<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 
+	<!-- tmpl_if root_login --> 
+		 <input type="hidden" name="email"   value="<!-- tmpl_var email escape="HTML" -->" />
+		 <input type="hidden" name="f"       value="membership" />
+		 <input type="hidden" name="process" value="1" />
+		 <input type="hidden" name="type"    value="<!-- tmpl_var type -->" />
+	<!-- /tmpl_if --> 
+
+	<!-- tmpl_unless root_login --> 
+
+		<!-- tmpl_loop fields --> 
+		    <p>
+		     <label for="<!-- tmpl_var name escape=HTML -->" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
+		      <!-- tmpl_var label escape=HTML --> (<!-- tmpl_var name escape=HTML -->): 
+		     </label>
+		    <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="<!-- tmpl_var name escape=HTML -->" value="<!-- tmpl_var value escape=HTML -->" disabled="disabled" />
+		    </p>
+		<!--/tmpl_loop--> 
+
+	<!-- tmpl_else --> 
+
+		<p class="alert">
+			Subscriber Profile Fields information will be changed for all Mailing Lists.
+		</p>
+		<!-- tmpl_loop fields --> 
+		    <p>
+		     <label for="<!-- tmpl_var name escape=HTML -->" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
+		      <!-- tmpl_var label escape=HTML --> (<!-- tmpl_var name escape=HTML -->): 
+		     </label>
+		    <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="<!-- tmpl_var name escape=HTML -->" value="<!-- tmpl_var value escape=HTML -->" />
+		    </p>
+		<!--/tmpl_loop-->
+
+	<!-- /tmpl_unless --> 
+
+	<!-- tmpl_if root_login --> 
+		 <div class="buttonfloat">
+		  <input type="submit" value="Edit Information" class="cautionary" />
+		 </div>
+	<!-- /tmpl_if --> 
+
+		</form>
+
+	<div class="floatclear"></div>
+
+
+
+	</fieldset>
+
+<!-- /tmpl_if -->
 
 <p>
  <a href="<!-- tmpl_var S_PROGRAM_URL -->?f=view_list;type=<!-- tmpl_var type -->;page=<!-- tmpl_var page -->;query=<!-- tmpl_var query -->;order_by=<!-- tmpl_var order_by -->;order_dir=<!-- tmpl_var order_dir -->">&lt;&lt; Back</a>
